Improved the documentation

--- a/Codes/BARRA2_data_compliation.ipynb
+++ b/Codes/BARRA2_data_compliation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMguK/sopyd+ACkWiZ6W6Up"
+      "authorship_tag": "ABX9TyMZ3Lnr3Yl8zBQGVPxV6SFb"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,6 +27,7 @@
         "5.   Save the matched field and remote data as barra2.csv in the ‘output/csv’ folder of the working directory.\n",
         "\n",
         "Important notes\n",
+        "*   Before running the script, please set all the variables in the first cell and delete the second cell if Google Colab environment is not used. (The script was made to be used with Google Colab environment and has not been tested outside it)\n",
         "*   The field data should has Australian time to work with this script, the time will be converted to UTC time before matching with BARRA2 data.\n",
         "*   BARRA2's temperature and RH are instatanuous data.\n",
         "*   Field observations with ambiguous Australian time during the conversion from AEDT to AEST are dropped.\n",
