Polished the documentation

--- a/Codes/BARRA2_data_compliation.ipynb
+++ b/Codes/BARRA2_data_compliation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ3Lnr3Yl8zBQGVPxV6SFb"
+      "authorship_tag": "ABX9TyPpCJQN8v3HVA5nAauQbkg0"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,17 +20,17 @@
       "source": [
         "# Start\n",
         "What this script does\n",
-        "1.   Load clean field data with topography, ex. output from Nick_phd_data_complilation.ipynb.\n",
-        "2.   Download and explore ‘tas’ and ‘hurs’ BARRA2 data of the BARRA2 grid cells that are the closest to field sites, between the first month and the last month of the field observations.\n",
-        "3.   Add BARRA2’s temperature and RH, that has **the closest location and UTC timing**, to field data observations.\n",
-        "4.   Calculate BARRA2’s VPD from barra2_Temperature and barra2_RH.\n",
-        "5.   Save the matched field and remote data as barra2.csv in the ‘output/csv’ folder of the working directory.\n",
+        "1.   Load clean field data with topography — for example output from `Nick_phd_data_complilation.ipynb`.\n",
+        "2.   Downloads and explores **BARRA2 data** (`tas` for temperature and `hurs` for relative humidity) for the grid cells closest to the field sites, spanning from the first to the last month of the field observations.\n",
+        "3. Matches BARRA2 temperature and RH values to the field observations based on the nearest grid cell and UTC timestamp.\n",
+        "4. Calculates **VPD** (vapor pressure deficit) from the matched BARRA2 temperature and RH.\n",
+        "5. Saves the combined field and remote sensing data as `barra2.csv` in the `output/csv` folder.\n",
         "\n",
         "Important notes\n",
-        "*   Before running the script, please set all the variables in the first cell and delete the second cell if Google Colab environment is not used. (The script was made to be used with Google Colab environment and has not been tested outside it)\n",
-        "*   The field data should has Australian time to work with this script, the time will be converted to UTC time before matching with BARRA2 data.\n",
-        "*   BARRA2's temperature and RH are instatanuous data.\n",
-        "*   Field observations with ambiguous Australian time during the conversion from AEDT to AEST are dropped.\n",
+        "*   Before running the script, please set all the variables in the **first cell** and delete the **second cell** if not using a Google Colab environment. (The script was made to be used with Google Colab environment and has not been tested outside it)\n",
+        "*   The field data timestamps must be in **Australian local time**. The script will convert them to **UTC** time before matching with BARRA2 data.\n",
+        "*   BARRA2's temperature and RH are **instatanuous** readings.\n",
+        "*   Field observations with **ambiguous timestamps** (e.g., during the daylight saving transition from AEDT to AEST) will be **excluded** from the output.\n",
         "\n",
         "\n",
         "\n",
