Added one sentence overview to the documentation

--- a/Codes/BARRA2_data_compliation.ipynb
+++ b/Codes/BARRA2_data_compliation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpCJQN8v3HVA5nAauQbkg0"
+      "authorship_tag": "ABX9TyPO7B4rC7R4QITEYUQnnIhw"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,20 +19,22 @@
       "cell_type": "markdown",
       "source": [
         "# Start\n",
-        "What this script does\n",
-        "1.   Load clean field data with topography — for example output from `Nick_phd_data_complilation.ipynb`.\n",
-        "2.   Downloads and explores **BARRA2 data** (`tas` for temperature and `hurs` for relative humidity) for the grid cells closest to the field sites, spanning from the first to the last month of the field observations.\n",
+        "\n",
+        "This script prepares vapor pressure deficit (VPD) data from BARRA2 and matches it with VPD from field observations for subsequent analysis.\n",
+        "\n",
+        "📄 **What this script does**\n",
+        "1. Loads cleaned field data with topography — for example, output from `Nick_phd_data_complilation.ipynb`.\n",
+        "2. Downloads and explores **BARRA2 data** (`tas` for temperature and `hurs` for relative humidity) for the grid cells closest to the field sites, spanning from the first to the last month of the field observations.\n",
         "3. Matches BARRA2 temperature and RH values to the field observations based on the nearest grid cell and UTC timestamp.\n",
         "4. Calculates **VPD** (vapor pressure deficit) from the matched BARRA2 temperature and RH.\n",
         "5. Saves the combined field and remote sensing data as `barra2.csv` in the `output/csv` folder.\n",
         "\n",
-        "Important notes\n",
-        "*   Before running the script, please set all the variables in the **first cell** and delete the **second cell** if not using a Google Colab environment. (The script was made to be used with Google Colab environment and has not been tested outside it)\n",
-        "*   The field data timestamps must be in **Australian local time**. The script will convert them to **UTC** time before matching with BARRA2 data.\n",
-        "*   BARRA2's temperature and RH are **instatanuous** readings.\n",
-        "*   Field observations with **ambiguous timestamps** (e.g., during the daylight saving transition from AEDT to AEST) will be **excluded** from the output.\n",
-        "\n",
-        "\n",
+        "⚠️ **Important notes**\n",
+        "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
+        "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
+        "* The field data timestamps must be in **Australian local time**. The script will convert them to **UTC** before matching with BARRA2 data.\n",
+        "* BARRA2's temperature and RH are **instantaneous** readings.\n",
+        "* Field observations with **ambiguous timestamps** (e.g., during the daylight saving transition from AEDT to AEST) will be **excluded** from the output.\n",
         "\n",
         "\n"
       ],
@@ -94,7 +96,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 415
+          "height": 223
         },
         "id": "5lu9eKTyTW92",
         "outputId": "b345e0ef-7eaf-4770-b2ac-71b5901b5a65"
@@ -645,7 +647,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 206
         },
         "id": "NC2p8jreFxNP",
         "outputId": "1f02c96c-9cd0-4880-a0f7-34c92d42f84a"
@@ -1032,7 +1034,7 @@
         "id": "9-qpPHGjw84H",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 437
+          "height": 414
         },
         "outputId": "72a5f4e5-cfdc-44b5-d8e6-9919791c6238"
       },
@@ -6855,7 +6857,7 @@
         "id": "MI3KLC0BRVRn",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 53
         },
         "outputId": "d4cac879-5ff2-4c18-bccb-20d9e9a7688d"
       },
