--- a/Codes/BARRA2_data_compliation.ipynb
+++ b/Codes/BARRA2_data_compliation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO7B4rC7R4QITEYUQnnIhw"
+      "authorship_tag": "ABX9TyOf3C2A6Bu73ck3rAGYJ0gb"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,7 +27,7 @@
         "2. Downloads and explores **BARRA2 data** (`tas` for temperature and `hurs` for relative humidity) for the grid cells closest to the field sites, spanning from the first to the last month of the field observations.\n",
         "3. Matches BARRA2 temperature and RH values to the field observations based on the nearest grid cell and UTC timestamp.\n",
         "4. Calculates **VPD** (vapor pressure deficit) from the matched BARRA2 temperature and RH.\n",
-        "5. Saves the combined field and remote sensing data as `barra2.csv` in the `output/csv` folder.\n",
+        "5. Saves the combined field and BARRA2 data as `barra2.csv` in the `output/csv` folder.\n",
         "\n",
         "⚠️ **Important notes**\n",
         "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
@@ -647,7 +647,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "NC2p8jreFxNP",
         "outputId": "1f02c96c-9cd0-4880-a0f7-34c92d42f84a"
@@ -1034,7 +1034,7 @@
         "id": "9-qpPHGjw84H",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 414
+          "height": 434
         },
         "outputId": "72a5f4e5-cfdc-44b5-d8e6-9919791c6238"
       },
@@ -6857,7 +6857,7 @@
         "id": "MI3KLC0BRVRn",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 86
         },
         "outputId": "d4cac879-5ff2-4c18-bccb-20d9e9a7688d"
       },
