Minor edit to the documentation

--- a/Codes/topography_calculation.ipynb
+++ b/Codes/topography_calculation.ipynb
@@ -17,7 +17,7 @@
         "⚠️ **Important notes**\n",
         "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
         "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
-        "* Some relief values near the `bbox` border may be inaccurately filled for convenience in coastal calculations. This should not affect results as long as selected points are not near the seaside.\n"
+        "* Some relief values near the `bbox` border may be inaccurately filled for convenience in coastal calculations. This should not affect results as long as selected points are not near the `bbox` border.\n"
       ],
       "metadata": {
         "id": "Qz3tj4ZNx78y"
@@ -5953,7 +5953,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNp/c2ETXgMKEB2z+ULDVgd"
+      "authorship_tag": "ABX9TyNxeDC6fQKyuEKAekrU4sQl"
     },
     "kernelspec": {
       "display_name": "Python 3",
