Separated output directory generation and Colab's Gdrive mounting in different cells.

--- a/Codes/Nick_phd_data_compilation.ipynb
+++ b/Codes/Nick_phd_data_compilation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkPsOVEZk5q65pymaCjUM+"
+      "authorship_tag": "ABX9TyNWRVK5hGQwbnes+9qnk1xs"
     },
     "kernelspec": {
       "name": "python3",
@@ -77,12 +77,23 @@
       "source": [
         "# Connect to Google Drive\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate output directory\n",
         "\n",
         "import os\n",
         "output_dir = os.path.join(working_dir, \"output/csv\")\n",
         "os.makedirs(output_dir, exist_ok=True)"
-      ]
+      ],
+      "metadata": {
+        "id": "XPWnv-rha6X9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
