Add steps for adding veg cover data in df

--- a/Codes/Nick_phd_data_compilation.ipynb
+++ b/Codes/Nick_phd_data_compilation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWRVK5hGQwbnes+9qnk1xs"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO+tg30BIatrMH2XzLmbh88"
     },
     "kernelspec": {
       "name": "python3",
@@ -5289,7 +5290,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Save df to csv"
+        "## Fill in vegetation cover"
+      ],
+      "metadata": {
+        "id": "BzQDsffHV81o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load veg cover NetCFD\n",
+        "# Fill in veg cover in df row by row\n",
+        "# Check for accuracy of the code\n",
+        "# Check for NaN and deal with it"
+      ],
+      "metadata": {
+        "id": "Fv2wrbHt9CrZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Save df to csv"
       ],
       "metadata": {
         "id": "KQSVyLZFSHYB"
@@ -5830,34 +5854,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Fill in vegetation cover"
+        "# Notes"
       ],
       "metadata": {
-        "id": "BzQDsffHV81o"
+        "id": "G98kJmH5OkCP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def download_file(url, filename):\n",
-        "    try:\n",
-        "        response = requests.get(url, stream=True)\n",
-        "        response.raise_for_status()\n",
-        "\n",
-        "        with open(filename, 'wb') as file:\n",
-        "            for chunk in response.iter_content(chunk_size=8192):\n",
-        "                file.write(chunk)\n",
-        "        print(f\"Data downloaded successfully to {filename}\")\n",
-        "        return True # Indicate successful download\n",
-        "    except requests.exceptions.RequestException as e:\n",
-        "        print(f\"Error downloading data: {e}\")\n",
-        "        return False # Indicate download failure"
-      ],
-      "metadata": {
-        "id": "bAYD99pOJWx9"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5948,56 +5949,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        " # Loading veg cover data fom DEA Fractional Cover dataset\n",
-        "\n",
-        "import datacube\n",
-        "from datacube.utils import masking\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# import sys\n",
-        "# sys.path.insert(1, '../Tools/')\n",
-        "# from dea_tools.datahandling import wofs_fuser\n",
-        "# from dea_tools.plotting import rgb, plot_wo\n",
-        "\n",
-        "dc = datacube.Datacube(app='DEA_Fractional_Cover')\n",
-        "dc_measurements = dc.list_measurements()\n",
-        "dc_measurements.loc[['ga_ls_fc_3']]\n",
-        "\n",
-        "query = {\n",
-        "  'y': (-34.06813, -34.22099),\n",
-        "    'x': (139.83315, 140.05151),\n",
-        "    'time': ('1993-10-15', '1993-11-20'),\n",
-        "}\n",
-        "\n",
-        "# Load DEA Fractional Cover data from the datacube\n",
-        "fc = dc.load(product='ga_ls_fc_3',\n",
-        "             measurements=['bs', 'pv', 'npv', 'ue'],\n",
-        "             output_crs='EPSG:32754',\n",
-        "             resolution=(-30, 30),\n",
-        "             group_by='solar_day',\n",
-        "             **query)\n",
-        "\n",
-        "# Explore the veg_cover_data\n",
-        "# Fill in df with veg_cover_data"
-      ],
-      "metadata": {
-        "id": "-u55rAE5V6mB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Notes"
-      ],
-      "metadata": {
-        "id": "G98kJmH5OkCP"
-      }
     },
     {
       "cell_type": "code",
