Updated documentation with veg_cover related information

--- a/Codes/Nick_phd_data_compilation.ipynb
+++ b/Codes/Nick_phd_data_compilation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMGHU0XnksUP7k4i5gx843S"
+      "authorship_tag": "ABX9TyMV/ltghB2Lfm+dD2OCflgL"
     },
     "kernelspec": {
       "name": "python3",
@@ -30,11 +30,16 @@
         "4. Calculates **VPD** (vapor pressure deficit) from the corrected temperature and RH.\n",
         "5. Generates `site_data_summary.csv`, which contains the list of each site (with X and Y coordinates) and the dates for which data is available.\n",
         "6. For each site in `sites_df`, fills in **slope**, **aspect**, and **relief** using precomputed `.tif` files from `topography_calculation.ipynb`. These topographic values are then used to enrich the full field dataset.\n",
-        "7. **TODO**: Add **vegetation cover** information.\n",
+        "7. The **vegetation cover** data is derived from the `pv` field of the DEA Fractional Cover product, retrieved via the ARE NCI. For each observation, the `veg_cover` value is taken from the `pv` data point closest in time and location.\n",
+        "8. The resulting observations, with their slope, aspect, relief, and vegetation cover, are saved as `in-situ_topography.csv`.\n",
         "\n",
         "⚠️ **Important notes**\n",
         "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
         "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
+        "* The `DEA_Fractional_cover_PV.nc` file, which contains vegetation cover data from the DEA Fractional Cover product, has an incorrect `crs` attribute. The correct coordinate reference system is EPSG:32754.\n",
+        "* Many observations recieve **NaN values** for `veg_cover` due to the absense of corresponding vegetation cover data at specific sites and times in DEA Fractional Cover product. These observations are excluded from the final dataset.\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
@@ -53,12 +58,12 @@
       "metadata": {
         "id": "9EVlEv6AIXRc"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "C_X5h350Hduv",
         "colab": {
@@ -93,7 +98,7 @@
       "metadata": {
         "id": "XPWnv-rha6X9"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +128,7 @@
       "metadata": {
         "id": "pWaOdGxBIQ-v"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +159,7 @@
         },
         "outputId": "f0e25cc0-eac8-48e1-9763-6cf12c2837ab"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +951,7 @@
         },
         "outputId": "40b3afab-437d-41a2-a4c1-e8d62b38d363"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1077,7 @@
         },
         "outputId": "88e6a64d-a7b4-4ebd-b0d2-16498aef3150"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,7 +1887,7 @@
         },
         "outputId": "dc429b2a-0c1e-4351-9669-93fe9b0f6941"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2211,7 +2216,7 @@
         },
         "outputId": "ce1ba188-3e36-49d7-c814-b45286c61af8"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2271,7 +2276,7 @@
         },
         "outputId": "7f8b8a99-e3bf-4c43-e2b1-1e73a73a681b"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2766,7 +2771,7 @@
         "id": "GR2NMdV-8iI6",
         "outputId": "f3a0e2fb-48d5-4307-e487-507a1bf916ed"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3104,7 +3109,7 @@
         "id": "QLrYKoO2RFYh",
         "outputId": "2bcaaa5e-0cc9-4665-aee3-83a11a6ead85"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3457,7 +3462,7 @@
         },
         "outputId": "3f4ddb38-8a01-4ea0-8c43-f3cfea38c935"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3885,7 +3890,7 @@
       "metadata": {
         "id": "1y-0bl2DXM5i"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3909,7 +3914,7 @@
         },
         "outputId": "107d800d-6e34-410f-d2d2-154008cde9ff"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3986,7 +3991,7 @@
       "metadata": {
         "id": "RGKJ6x3ZJKTy"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4005,7 +4010,7 @@
         },
         "outputId": "9a724207-76e9-4240-f5c4-ac6980bb8c43"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4499,7 +4504,7 @@
         },
         "outputId": "b4669b9b-3281-429e-9784-664591bd9a6e"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4719,7 +4724,7 @@
         },
         "outputId": "cacf41df-37c6-498b-d103-169408a45cb0"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5221,7 +5226,7 @@
         "id": "hTkxvLx6_M1W",
         "outputId": "b725ba58-205f-4567-cf05-26b048a55cd1"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5261,7 +5266,7 @@
         "id": "RaB8EO9J9yru",
         "outputId": "77bb2183-dfdc-4000-8d61-c72b308093ca"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5318,7 +5323,7 @@
         "id": "Fv2wrbHt9CrZ",
         "outputId": "d1298fff-f8c7-4536-e4da-bb100733751b"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5874,7 +5879,7 @@
           "height": 488
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5905,7 +5910,7 @@
         "id": "_YPA9EF5AdQd",
         "outputId": "638328c8-5a16-496b-c254-f8a0fa7d65bc"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6302,7 +6307,7 @@
         "id": "mNSUuwdkIBFQ",
         "outputId": "b7e2cc4f-0893-4d19-f93c-99ffbfda949f"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6710,7 +6715,7 @@
         "id": "pSxCldxP-2By",
         "outputId": "e1cfe6f4-58a6-4968-84fe-174fd8a02570"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7209,7 +7214,7 @@
           "height": 510
         }
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7746,7 +7751,7 @@
         },
         "outputId": "5062440f-a183-413a-bad5-b6bbfbf94b99"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8261,7 +8266,7 @@
         },
         "outputId": "a1affb95-6294-4c74-d044-a63a56553941"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
