Updated documentation with improved use of bold formatting.

--- a/Codes/Nick_phd_data_compilation.ipynb
+++ b/Codes/Nick_phd_data_compilation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMV/ltghB2Lfm+dD2OCflgL"
+      "authorship_tag": "ABX9TyODsmvF5ngXKZoWMjFWi0SF"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,21 +23,21 @@
         "\n",
         "This script cleans field data from Nick's PhD and enriches it with slope, aspect, relief, and vegetation cover values.\n",
         "\n",
-        "📄 **What this script does**\n",
+        "## 📄 **What this script does**\n",
         "1. **Cleans** the field data by selecting only observations where `Height` equals 1, and `Datetime` is after the installation date/time and before the removal date/time.\n",
         "2. Removes all columns except `SiteID`, `X`, `Y`, `Datetime`, `C`, and `RH`. The `C` column is renamed to `Temperature`.\n",
-        "3. **Corrects** relative humidity (`RH`) using equations from the supplementary material of this publication: [https://doi.org/10.1016/j.agrformet.2013.03.008](https://doi.org/10.1016/j.agrformet.2013.03.008).\n",
-        "4. Calculates **VPD** (vapor pressure deficit) from the corrected temperature and RH.\n",
+        "3. **Corrects relative humidity** (`RH`) using equations from the supplementary material of this publication: [https://doi.org/10.1016/j.agrformet.2013.03.008](https://doi.org/10.1016/j.agrformet.2013.03.008).\n",
+        "4. **Calculates VPD** (vapor pressure deficit) from the corrected temperature and RH.\n",
         "5. Generates `site_data_summary.csv`, which contains the list of each site (with X and Y coordinates) and the dates for which data is available.\n",
-        "6. For each site in `sites_df`, fills in **slope**, **aspect**, and **relief** using precomputed `.tif` files from `topography_calculation.ipynb`. These topographic values are then used to enrich the full field dataset.\n",
-        "7. The **vegetation cover** data is derived from the `pv` field of the DEA Fractional Cover product, retrieved via the ARE NCI. For each observation, the `veg_cover` value is taken from the `pv` data point closest in time and location.\n",
+        "6. For each site in `sites_df`, **fills in slope, aspect, and relief** using precomputed `.tif` files from `topography_calculation.ipynb`. These topographic values are then used to enrich the full field dataset.\n",
+        "7. The vegetation cover data is derived from the `pv` field of the DEA Fractional Cover product, retrieved via the ARE NCI. For each observation, **the `veg_cover` value is taken from the `pv` data point closest in time and location.**\n",
         "8. The resulting observations, with their slope, aspect, relief, and vegetation cover, are saved as `in-situ_topography.csv`.\n",
         "\n",
-        "⚠️ **Important notes**\n",
-        "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
+        "## ⚠️ **Important notes**\n",
+        "* **Before running the script**, set all variables in the first cell, and delete the second cell if not using a Google Colab environment.  \n",
         "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
         "* The `DEA_Fractional_cover_PV.nc` file, which contains vegetation cover data from the DEA Fractional Cover product, has an incorrect `crs` attribute. The correct coordinate reference system is EPSG:32754.\n",
-        "* Many observations recieve **NaN values** for `veg_cover` due to the absense of corresponding vegetation cover data at specific sites and times in DEA Fractional Cover product. These observations are excluded from the final dataset.\n",
+        "* **Many observations recieve NaN values for `veg_cover`** due to the absense of corresponding vegetation cover data at specific sites and times in DEA Fractional Cover product. These observations are excluded from the final dataset.\n",
         "\n",
         "\n",
         "\n",
