Updated the documentation

--- a/Codes/Nick_phd_data_compilation.ipynb
+++ b/Codes/Nick_phd_data_compilation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8L/ML1M6EOXcTYvUFNr0M"
+      "authorship_tag": "ABX9TyNfAcD8HRCCJs9HksiElvXv"
     },
     "kernelspec": {
       "name": "python3",
@@ -36,7 +36,7 @@
         "* **Before running the script**, set all variables in the first cell, and delete the second cell if not using a Google Colab environment.  \n",
         "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
         "* The `DEA_Fractional_cover_PV.nc` file, which contains vegetation cover data from the DEA Fractional Cover product, has an incorrect `crs` attribute. The correct coordinate reference system is EPSG:32754.\n",
-        "* **Many observations recieve NaN values for `veg_cover`** due to the absense of corresponding vegetation cover data at specific sites and times in DEA Fractional Cover product. These observations are excluded from the final dataset.\n",
+        "* For site observations that the corresponding vegetation cover data in DEA Fractional Cover product are `NaN`s, **the nearest valid vegetation cover values in time are used.**\n",
         "\n",
         "\n",
         "\n",
@@ -7959,12 +7959,12 @@
         "df[df['SiteID'].isin([302]) & (df['Datetime'].dt.strftime('%Y-%m-%d') == '2020-11-06')]"
       ],
       "metadata": {
-        "id": "NEW2wR5lBA2Z",
-        "outputId": "ec7639e0-f71e-42a5-a6a2-b3c1cdf5af7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "NEW2wR5lBA2Z",
+        "outputId": "ec7639e0-f71e-42a5-a6a2-b3c1cdf5af7e"
       },
       "execution_count": 51,
       "outputs": [
@@ -9226,12 +9226,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "DXobdojy_TGB",
-        "outputId": "0e2c9ee7-3d50-4f09-c06e-172748d1329c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 680
-        }
+        },
+        "id": "DXobdojy_TGB",
+        "outputId": "0e2c9ee7-3d50-4f09-c06e-172748d1329c"
       },
       "execution_count": 55,
       "outputs": [
