--- a/Codes/SILO_data_compilation.ipynb
+++ b/Codes/SILO_data_compilation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtZejXtDgx/0qROieUZHnB"
+      "authorship_tag": "ABX9TyMIYIUmL8lyMo8BTvn/YeAu"
     },
     "kernelspec": {
       "name": "python3",
@@ -3277,8 +3277,8 @@
       "cell_type": "code",
       "source": [
         "# save df\n",
-        "df_max_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_max_temp_vpd.csv\"), index=False, float_format='%.4f')\n",
-        "df_min_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_min_temp_vpd.csv\"), index=False, float_format='%.4f')"
+        "df_max_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_max_temp_vpd.csv\"), index=False)\n",
+        "df_min_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_min_temp_vpd.csv\"), index=False)"
       ],
       "metadata": {
         "id": "7HURGOZDVwjs"
