Commented out unused code

--- a/Codes/BARRA2_data_compilation.ipynb
+++ b/Codes/BARRA2_data_compilation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOf3C2A6Bu73ck3rAGYJ0gb"
+      "authorship_tag": "ABX9TyM7+sr69YX8tC0gcq1MWp55"
     },
     "kernelspec": {
       "name": "python3",
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "kGkmuT6BVk2I"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "id": "PWAPFPlBVr4n",
         "outputId": "83c4b6e0-dc8a-467e-9842-6da204c99cbf"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -499,7 +499,7 @@
         "id": "09TCVbyQWzag",
         "outputId": "bce89aba-33c6-45c3-b275-d547c682d3ea"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +538,7 @@
         "id": "SieNW-RVXlqp",
         "outputId": "66e3a3f5-9b9e-4302-ffe2-c8810433d378"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,17 +598,17 @@
       "metadata": {
         "id": "2OfyRVBPXpWZ"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# BARRA2 data exploration\n",
+        "# # BARRA2 data exploration\n",
         "\n",
-        "barra2_data_dir = os.path.join(working_dir, \"Data/barra2\")\n",
-        "barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
-        "barra2_df.info()"
+        "# barra2_data_dir = os.path.join(working_dir, \"Data/barra2\")\n",
+        "# barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
+        "# barra2_df.info()"
       ],
       "metadata": {
         "colab": {
@@ -617,7 +617,7 @@
         "id": "OZl3AbZ6BHUP",
         "outputId": "5e691b46-0061-440d-cce9-4a0659937a3a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +642,7 @@
     {
       "cell_type": "code",
       "source": [
-        "barra2_df.head()"
+        "# barra2_df.head()"
       ],
       "metadata": {
         "colab": {
@@ -652,7 +652,7 @@
         "id": "NC2p8jreFxNP",
         "outputId": "1f02c96c-9cd0-4880-a0f7-34c92d42f84a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,36 +975,36 @@
     {
       "cell_type": "code",
       "source": [
-        "# BARRA2 netCDF data exploration\n",
+        "# # BARRA2 netCDF data exploration\n",
         "\n",
-        "import xarray as xr\n",
+        "# import xarray as xr\n",
         "\n",
-        "if explore_barra2_data:\n",
-        "    tas_url = \"https://thredds.nci.org.au/thredds/fileServer/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/tas/latest/tas_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_201812-201812.nc\"\n",
-        "    hurs_url = \"https://thredds.nci.org.au/thredds/fileServer/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/hurs/latest/hurs_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_201812-201812.nc\"\n",
-        "    !curl -L {tas_url} -o \"barra2_tas.nc\"\n",
-        "    !curl -L {hurs_url} -o \"barra2_hurs.nc\"\n",
+        "# if explore_barra2_data:\n",
+        "#     tas_url = \"https://thredds.nci.org.au/thredds/fileServer/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/tas/latest/tas_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_201812-201812.nc\"\n",
+        "#     hurs_url = \"https://thredds.nci.org.au/thredds/fileServer/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/hurs/latest/hurs_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_201812-201812.nc\"\n",
+        "#     !curl -L {tas_url} -o \"barra2_tas.nc\"\n",
+        "#     !curl -L {hurs_url} -o \"barra2_hurs.nc\"\n",
         "\n",
-        "    tas_ds = xr.open_dataset(\"barra2_tas.nc\")\n",
-        "    hurs_ds = xr.open_dataset(\"barra2_hurs.nc\")\n",
-        "    tas_ds"
+        "#     tas_ds = xr.open_dataset(\"barra2_tas.nc\")\n",
+        "#     hurs_ds = xr.open_dataset(\"barra2_hurs.nc\")\n",
+        "#     tas_ds"
       ],
       "metadata": {
         "id": "asUcGxsUCV0a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "if explore_barra2_data:\n",
-        "    hurs_ds"
+        "# if explore_barra2_data:\n",
+        "#     hurs_ds"
       ],
       "metadata": {
         "id": "PDhZPzhJEiaM"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1038,7 +1038,7 @@
         },
         "outputId": "72a5f4e5-cfdc-44b5-d8e6-9919791c6238"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1455,7 @@
         },
         "outputId": "b991b283-6a60-46bd-badc-c66f62f9fc4c"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6861,7 +6861,7 @@
         },
         "outputId": "d4cac879-5ff2-4c18-bccb-20d9e9a7688d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7043,7 +7043,7 @@
         },
         "outputId": "dcb034ba-22dc-4e17-8e50-b52a575bfd9d"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7458,7 +7458,7 @@
       "metadata": {
         "id": "7HURGOZDVwjs"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     }
   ]
